--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.1",
+    "mongoose": "^7.5.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
